--- a/l4/Lecture 14 - Series.ipynb
+++ b/l4/Lecture 14 - Series.ipynb
@@ -461,14 +461,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "obj2.index.name = 'C'"
+    "obj2.index.name = 'Countries'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Countries\n",
+       "China        3000000.0\n",
+       "Germany      4300000.0\n",
+       "Japan        2100000.0\n",
+       "USA           400000.0\n",
+       "USSR         8700000.0\n",
+       "Argentina          NaN\n",
+       "Name: World War 2 Casualties, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
