--- a/l4/Lecture 17 - Reindexing.ipynb
+++ b/l4/Lecture 17 - Reindexing.ipynb
@@ -541,6 +541,192 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>co3</th>\n",
+       "      <th>col4</th>\n",
+       "      <th>col5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>1.214075</td>\n",
+       "      <td>-0.576079</td>\n",
+       "      <td>-0.449045</td>\n",
+       "      <td>0.264270</td>\n",
+       "      <td>1.739269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>-2.680124</td>\n",
+       "      <td>-1.178022</td>\n",
+       "      <td>-0.474924</td>\n",
+       "      <td>1.054385</td>\n",
+       "      <td>-2.199724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>-1.011042</td>\n",
+       "      <td>-0.203590</td>\n",
+       "      <td>0.741412</td>\n",
+       "      <td>-0.582090</td>\n",
+       "      <td>0.013642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.852553</td>\n",
+       "      <td>-0.629334</td>\n",
+       "      <td>-0.533723</td>\n",
+       "      <td>0.495707</td>\n",
+       "      <td>1.867272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>-0.349925</td>\n",
+       "      <td>0.878219</td>\n",
+       "      <td>1.735948</td>\n",
+       "      <td>-1.525461</td>\n",
+       "      <td>-1.544648</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       col1      col2       co3      col4      col5\n",
+       "A  1.214075 -0.576079 -0.449045  0.264270  1.739269\n",
+       "B -2.680124 -1.178022 -0.474924  1.054385 -2.199724\n",
+       "D -1.011042 -0.203590  0.741412 -0.582090  0.013642\n",
+       "E  0.852553 -0.629334 -0.533723  0.495707  1.867272\n",
+       "F -0.349925  0.878219  1.735948 -1.525461 -1.544648"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "      <th>col4</th>\n",
+       "      <th>col5</th>\n",
+       "      <th>col6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>1.214075</td>\n",
+       "      <td>-0.576079</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.264270</td>\n",
+       "      <td>1.739269</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>-2.680124</td>\n",
+       "      <td>-1.178022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.054385</td>\n",
+       "      <td>-2.199724</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>-1.011042</td>\n",
+       "      <td>-0.203590</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.582090</td>\n",
+       "      <td>0.013642</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.852553</td>\n",
+       "      <td>-0.629334</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.495707</td>\n",
+       "      <td>1.867272</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>-0.349925</td>\n",
+       "      <td>0.878219</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.525461</td>\n",
+       "      <td>-1.544648</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       col1      col2  col3      col4      col5  col6\n",
+       "A  1.214075 -0.576079   NaN  0.264270  1.739269   NaN\n",
+       "B -2.680124 -1.178022   NaN  1.054385 -2.199724   NaN\n",
+       "C       NaN       NaN   NaN       NaN       NaN   NaN\n",
+       "D -1.011042 -0.203590   NaN -0.582090  0.013642   NaN\n",
+       "E  0.852553 -0.629334   NaN  0.495707  1.867272   NaN\n",
+       "F -0.349925  0.878219   NaN -1.525461 -1.544648   NaN"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dframe.ix[['A','B','C', 'D', 'E', 'F'], new_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
